# epub-to-audio

./: .gitignore  main.py  pyproject.toml  test.epub  test2.epub
data/: test.json  test2.json
epub-to-audio/: pyproject.toml
utils/: epub.py
