[tool.poetry]
name = "epub-to-audio"
version = "0.1.0"
description = ""
authors = ["Vincent Lam <vincent@formfluid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.4"
pydub = "^0.25.1"
pyttsx3 = "^2.98"
gtts = "^2.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
